include/Win32/Physics.NewtonImport.hpp

struct TNewtonWorldConvexCastReturnInfo;
typedef float *PFloat;
typedef int *PInteger;
typedef void * *PNewtonBody;
typedef void * *PNewtonWorld;
typedef void * *PNewtonJoint;
typedef void * *PNewtonCollision;
struct DECLSPEC_DRECORD TNewtonWorldConvexCastReturnInfo
{
public:
	System::StaticArray<float, 4> m_point;
	System::StaticArray<float, 4> m_normal;
	int m_contactID;
	void * *m_hitBody;
	float m_penetration;
};
typedef TNewtonWorldConvexCastReturnInfo *PNewtonWorldConvexCastReturnInfo;
typedef void * __cdecl (*NewtonAllocMemory)(int sizeInBytes);
typedef void __cdecl (*NewtonFreeMemory)(const void * ptr, int sizeInBytes);
typedef void __cdecl (*NewtonWorldDestructorCallback)(const PNewtonWorld world);
typedef NewtonWorldDestructorCallback *PNewtonWorldDestructorCallback;
typedef void __cdecl (*NewtonPostUpdateCallback)(const PNewtonWorld world, float timestep);
typedef NewtonPostUpdateCallback *PNewtonPostUpdateCallback;
typedef void __cdecl (*NewtonCreateContactCallback)(const PNewtonWorld newtonWorld, const PNewtonJoint contact);
typedef void __cdecl (*NewtonDestroyContactCallback)(const PNewtonWorld newtonWorld, const PNewtonJoint contact);
typedef void __cdecl (*NewtonWorldListenerDebugCallback)(const PNewtonWorld world, const void * listener, const void * debugContext);
typedef void __cdecl (*NewtonWorldListenerBodyDestroyCallback)(const PNewtonWorld world, const void * listenerUserData, const PNewtonBody body);
typedef NewtonWorldListenerBodyDestroyCallback *PNewtonWorldListenerBodyDestroyCallback;
typedef void __cdecl (*NewtonWorldUpdateListenerCallback)(const PNewtonWorld world, const void * listenerUserData, float timestep);
typedef void __cdecl (*NewtonWorldDestroyListenerCallback)(const PNewtonWorld world, const void * listenerUserData);
typedef void __cdecl (*NewtonSerializeCallback)(const void * serializeHandle, const void * buffer, int size);
typedef NewtonSerializeCallback *PNewtonSerializeCallback;
typedef void __cdecl (*NewtonDeserializeCallback)(const void * serializeHandle, const void * buffer, int size);
typedef NewtonDeserializeCallback *PNewtonDeserializeCallback;
typedef void __cdecl (*NewtonOnBodySerializationCallback)(const PNewtonBody body, const void * userData, PNewtonSerializeCallback functionparam, const void * serializeHandle);
typedef void __cdecl (*NewtonOnBodyDeserializationCallback)(const PNewtonBody body, const void * userData, PNewtonDeserializeCallback functionparam, const void * serializeHandle);
typedef void __cdecl (*NewtonOnJointSerializationCallback)(const PNewtonJoint joint, PNewtonSerializeCallback functionparam, const void * serializeHandle);
typedef void __cdecl (*NewtonOnJointDeserializationCallback)(const PNewtonBody body0, const PNewtonBody body1, PNewtonDeserializeCallback functionparam, const void * serializeHandle);
typedef void __cdecl (*NewtonCollisionCopyConstructionCallback)(const PNewtonWorld newtonWorld, const PNewtonCollision collision, const PNewtonCollision sourceCollision);
typedef void __cdecl (*NewtonCollisionDestructorCallback)(const PNewtonWorld newtonWorld, const PNewtonCollision collision);
typedef int __cdecl (*NewtonIslandUpdate)(const PNewtonWorld newtonWorld, const void * islandHandle, int bodyCount);
typedef unsigned __cdecl (*NewtonWorldRayPrefilterCallback)(const PNewtonBody body, const PNewtonCollision collision, const void * userData);
typedef float __cdecl (*NewtonWorldRayFilterCallback)(const PNewtonBody body, const PNewtonCollision shapeHit, const PFloat hitContact, const PFloat hitNormal, __int64 collisionID, const void * userData, float intersectParam);
typedef int __cdecl (*NewtonBodyIterator)(const PNewtonBody body, const void * userData);
typedef void __cdecl (*NewtonJointIterator)(const PNewtonJoint joint, const void * userData);
typedef void __cdecl (*NewtonJobTask)(const PNewtonWorld world, const void * userData, int threadIndex);
//-- var, const, procedure ---------------------------------------------------
#define NEWTON_API L"newton32s.dll"
extern "C" int __cdecl NewtonWorldGetVersion(void);
extern "C" int __cdecl NewtonWorldFloatSize(void);
extern "C" int __cdecl NewtonGetMemoryUsed(void);
extern "C" void __cdecl NewtonSetMemorySystem(NewtonAllocMemory malloc, NewtonFreeMemory free);
extern "C" PNewtonWorld __cdecl NewtonCreate(void);
extern "C" void __cdecl NewtonDestroy(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonDestroyAllBodies(const PNewtonWorld newtonWorld);
extern "C" PNewtonPostUpdateCallback __cdecl NewtonGetPostUpdateCallback(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonSetPostUpdateCallback(const PNewtonWorld newtonWorld, NewtonPostUpdateCallback callback);
extern "C" void * __cdecl NewtonAlloc(int sizeInBytes);
extern "C" void __cdecl NewtonFree(const void * ptr);
extern "C" void __cdecl NewtonLoadPlugins(const PNewtonWorld newtonWorld, const System::WideChar * plugInPath);
extern "C" void __cdecl NewtonUnloadPlugins(const PNewtonWorld newtonWorld);
extern "C" void * __cdecl NewtonCurrentPlugin(const PNewtonWorld newtonWorld);
extern "C" void * __cdecl NewtonGetFirstPlugin(const PNewtonWorld newtonWorld);
extern "C" void * __cdecl NewtonGetPreferedPlugin(const PNewtonWorld newtonWorld);
extern "C" void * __cdecl NewtonGetNextPlugin(const PNewtonWorld newtonWorld, const void * plugin);
extern "C" System::WideChar * __cdecl NewtonGetPluginString(const PNewtonWorld newtonWorld, const void * plugin);
extern "C" void __cdecl NewtonSelectPlugin(const PNewtonWorld newtonWorld, const void * plugin);
extern "C" float __cdecl NewtonGetContactMergeTolerance(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonSetContactMergeTolerance(const PNewtonWorld newtonWorld, float tolerance);
extern "C" void __cdecl NewtonInvalidateCache(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonSetSolverIterations(const PNewtonWorld newtonWorld, int model);
extern "C" int __cdecl NewtonGetSolverIterations(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonSetParallelSolverOnLargeIsland(const PNewtonWorld newtonWorld, int mode);
extern "C" int __cdecl NewtonGetParallelSolverOnLargeIsland(const PNewtonWorld newtonWorld);
extern "C" int __cdecl NewtonGetBroadphaseAlgorithm(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonSelectBroadphaseAlgorithm(const PNewtonWorld newtonWorld, int algorithmType);
extern "C" void __cdecl NewtonResetBroadphase(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonUpdate(const PNewtonWorld newtonWorld, float timestep);
extern "C" void __cdecl NewtonUpdateAsync(const PNewtonWorld newtonWorld, float timestep);
extern "C" void __cdecl NewtonWaitForUpdateToFinish(const PNewtonWorld newtonWorld);
extern "C" int __cdecl NewtonGetNumberOfSubsteps(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonSetNumberOfSubsteps(const PNewtonWorld newtonWorld, int subSteps);
extern "C" float __cdecl NewtonGetLastUpdateTime(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonSerializeToFile(const PNewtonWorld newtonWorld, const System::WideChar * filename, NewtonOnBodySerializationCallback bodyCallback, const void * bodyUserData);
extern "C" void __cdecl NewtonDeserializeFromFile(const PNewtonWorld newtonWorld, const System::WideChar * filename, NewtonOnBodyDeserializationCallback bodyCallback, const void * bodyUserData);
extern "C" void __cdecl NewtonSerializeScene(const PNewtonWorld newtonWorld, NewtonOnBodySerializationCallback bodyCallback, const void * bodyUserData, NewtonSerializeCallback serializeCallback, const void * serializeHandle);
extern "C" void __cdecl NewtonDeserializeScene(const PNewtonWorld newtonWorld, NewtonOnBodyDeserializationCallback bodyCallback, const void * bodyUserData, NewtonDeserializeCallback serializeCallback, const void * serializeHandle);
extern "C" PNewtonBody __cdecl NewtonFindSerializedBody(const PNewtonWorld newtonWorld, int bodySerializedID);
extern "C" void __cdecl NewtonSetJointSerializationCallbacks(const PNewtonWorld newtonWorld, NewtonOnJointSerializationCallback serializeJoint, NewtonOnJointDeserializationCallback deserializeJoint);
extern "C" void __cdecl NewtonGetJointSerializationCallbacks(const PNewtonWorld newtonWorld, const NewtonOnJointSerializationCallback serializeJoint, const NewtonOnJointDeserializationCallback deserializeJoint);
extern "C" void __cdecl NewtonWorldCriticalSectionLock(const PNewtonWorld newtonWorld, int threadIndex);
extern "C" void __cdecl NewtonWorldCriticalSectionUnlock(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonSetThreadsCount(const PNewtonWorld newtonWorld, int threads);
extern "C" int __cdecl NewtonGetThreadsCount(const PNewtonWorld newtonWorld);
extern "C" int __cdecl NewtonGetMaxThreadsCount(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonDispachThreadJob(const PNewtonWorld newtonWorld, NewtonJobTask task, const void * usedData, const System::WideChar * functionName);
extern "C" void __cdecl NewtonSyncThreadJobs(const PNewtonWorld newtonWorld);
extern "C" int __cdecl NewtonAtomicAdd(const PInteger ptr, int value);
extern "C" int __cdecl NewtonAtomicSwap(const PInteger ptr, int value);
extern "C" void __cdecl NewtonYield(void);
extern "C" void __cdecl NewtonSetIslandUpdateEvent(const PNewtonWorld newtonWorld, NewtonIslandUpdate islandUpdate);
extern "C" void __cdecl NewtonWorldForEachJointDo(const PNewtonWorld newtonWorld, NewtonJointIterator callback, const void * userData);
extern "C" void __cdecl NewtonWorldForEachBodyInAABBDo(const PNewtonWorld newtonWorld, const PFloat p0, const PFloat p1, NewtonBodyIterator callback, const void * userData);
extern "C" void __cdecl NewtonWorldSetUserData(const PNewtonWorld newtonWorld, const void * userData);
extern "C" void * __cdecl NewtonWorldGetUserData(const PNewtonWorld newtonWorld);
extern "C" void * __cdecl NewtonWorldAddListener(const PNewtonWorld newtonWorld, const System::WideChar * nameId, const void * listenerUserData);
extern "C" void * __cdecl NewtonWorldGetListener(const PNewtonWorld newtonWorld, const System::WideChar * nameId);
extern "C" void __cdecl NewtonWorldListenerSetDebugCallback(const PNewtonWorld newtonWorld, const void * listener, NewtonWorldListenerDebugCallback callback);
extern "C" void __cdecl NewtonWorldListenerSetPostStepCallback(const PNewtonWorld newtonWorld, const void * listener, NewtonWorldUpdateListenerCallback callback);
extern "C" void __cdecl NewtonWorldListenerSetPreUpdateCallback(const PNewtonWorld newtonWorld, const void * listener, NewtonWorldUpdateListenerCallback callback);
extern "C" void __cdecl NewtonWorldListenerSetPostUpdateCallback(const PNewtonWorld newtonWorld, const void * listener, NewtonWorldUpdateListenerCallback callback);
extern "C" void __cdecl NewtonWorldListenerSetDestructorCallback(const PNewtonWorld newtonWorld, const void * listener, NewtonWorldDestroyListenerCallback callback);
extern "C" void __cdecl NewtonWorldListenerSetBodyDestroyCallback(const PNewtonWorld newtonWorld, const void * listener, NewtonWorldListenerBodyDestroyCallback callback);
extern "C" void __cdecl NewtonWorldListenerDebug(const PNewtonWorld newtonWorld, const void * context);
extern "C" void * __cdecl NewtonWorldGetListenerUserData(const PNewtonWorld newtonWorld, const void * listener);
extern "C" PNewtonWorldListenerBodyDestroyCallback __cdecl NewtonWorldListenerGetBodyDestroyCallback(const PNewtonWorld newtonWorld, const void * listener);
extern "C" void __cdecl NewtonWorldSetDestructorCallback(const PNewtonWorld newtonWorld, NewtonWorldDestructorCallback destructorparam);
extern "C" PNewtonWorldDestructorCallback __cdecl NewtonWorldGetDestructorCallback(const PNewtonWorld newtonWorld);
extern "C" void __cdecl NewtonWorldSetCollisionConstructorDestructorCallback(const PNewtonWorld newtonWorld, NewtonCollisionCopyConstructionCallback constructorparam, NewtonCollisionDestructorCallback destructorparam);
extern "C" void __cdecl NewtonWorldSetCreateDestroyContactCallback(const PNewtonWorld newtonWorld, NewtonCreateContactCallback createContact, NewtonDestroyContactCallback destroyContact);
extern "C" void __cdecl NewtonWorldRayCast(const PNewtonWorld newtonWorld, const PFloat p0, const PFloat p1, NewtonWorldRayFilterCallback filter, const void * userData, NewtonWorldRayPrefilterCallback prefilter, int threadIndex);
extern "C" int __cdecl NewtonWorldConvexCast(const PNewtonWorld newtonWorld, const PFloat matrix, const PFloat target, const PNewtonCollision shape, const PFloat param, const void * userData, NewtonWorldRayPrefilterCallback prefilter, const PNewtonWorldConvexCastReturnInfo info, int maxContactsCount, int threadIndex);
extern "C" int __cdecl NewtonWorldCollide(const PNewtonWorld newtonWorld, const PFloat matrix, const PNewtonCollision shape, const void * userData, NewtonWorldRayPrefilterCallback prefilter, const PNewtonWorldConvexCastReturnInfo info, int maxContactsCount, int threadIndex);
extern "C" int __cdecl NewtonWorldGetBodyCount(const PNewtonWorld newtonWorld);
extern "C" int __cdecl NewtonWorldGetConstraintCount(const PNewtonWorld newtonWorld);
extern "C" PNewtonJoint __cdecl NewtonWorldFindJoint(const PNewtonBody body0, const PNewtonBody body1);
extern "C" PNewtonBody __cdecl NewtonIslandGetBody(const void * island, int bodyIndex);
extern "C" void __cdecl NewtonIslandGetBodyAABB(const void * island, int bodyIndex, const PFloat p0, const PFloat p1);